--- a/Client/package.json
+++ b/Client/package.json
@@ -21,11 +21,13 @@
     "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.548.0",
+    "razorpay": "^2.9.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
+    "react-to-print": "^3.2.0",
     "recharts": "^3.3.0",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
